infrastructure/base/gateway-api/Gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: scdb-gateway
  namespace: default
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 8000
      hostname: "*.home.dblanchet.net"
      allowedRoutes:
        namespaces:
          from: All
    - name: tls
      protocol: TLS
      port: 8443
      hostname: "*.home.dblanchet.net"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
#    - name: https-test-web
#      protocol: HTTPS
#      port: 8443
#      hostname: test-web.prod.home.dblanchet.net
#      tls:
#        mode: Terminate
#        certificateRefs:
#          - kind: Secret
#            name: test-web-prod-ssl
#      allowedRoutes:
#        namespaces:
#          from: Selector
#          selector:
#            matchLabels:
#              gateway-access: test
